docs: add swagger documentation for login and index/store income
